
  ZOOKEEPER-1154. Data inconsistency when the node(s) with the highest zxid is not present at the time of leader election. (Vishal Kathuria via camille)
  
  ZOOKEEPER-1156. Log truncation truncating log too much - can cause data loss. (Vishal Kathuria via camille)
 
  ZOOKEEPER-961. Watch recovery after disconnection when connection string contains a prefix. 
  (Matthias Spycher via mahadev)
 
Release 3.3.3 - 2011-02-23
Backward compatible changes:

BUGFIXES:
  ZOOKEEPER-957. zkCleanup.sh doesn't do anything (Ted Dunning via mahadev)

  ZOOKEEPER-888. c-client / zkpython: Double free corruption on node
  watcher (Austin Shoemaker via henryr)

  ZOOKEEPER-921. zkPython incorrectly checks for existence of required
  ACL elements (Nicholas Knight via henryr)

  ZOOKEEPER-882. Startup loads last transaction from snapshot
  (Jared Cantwell via breed)

  ZOOKEEPER-962. leader/follower coherence issue when follower is receiving a
  DIFF (Camille Fournier via breed)

  ZOOKEEPER-913. Version parser fails to parse "3.3.2-dev" from build.xml
  (Anthony Urso and phunt via phunt)

  ZOOKEEPER-985. Test BookieRecoveryTest fails on trunk. (fpj via breed)

  ZOOKEEPER-880. QuorumCnxManager$SendWorker grows without bounds (vishal via breed)
 
  ZOOKEEPER-1046. Creating a new sequential node results in a ZNODEEXISTS error. (Vishal K via camille)
  
  ZOOKEEPER-1069. Calling shutdown() on a QuorumPeer too quickly can lead to a corrupt log. (Vishal K via camille) 
   
IMPROVEMENTS:
  ZOOKEEPER-963. Make Forrest work with JDK6 (Carl Steinbach via henryr)

  ZOOKEEPER-712. Bookie recovery (Erwin and flavio via mahadev)

  ZOOKEEPER-465. Ledger size in bytes. (Flavio via mahadev)

  ZOOKEEPER-960. Publish BookKeeper jars into maven. (mahadev via breed)

Release 3.3.2 - 2010-11-04
Backward compatible changes:

BUGFIXES:
  ZOOKEEPER-783. committedLog in ZKDatabase is not properly synchronized
  (henry via mahadev)

  ZOOKEEPER-790. Last processed zxid set prematurely while establishing 